# simple-text

./: Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac  confirm-exit.vala  main-window.ui  main-window.vala  menu.ui  programming-languages.vala  readme.md  simle-source-view.vala  simple-header-bar.vala  simple-language-picker.vala  simple-panel.vala  simple-source-view.vala  simple-statusbar.vala  simple-tab-bar.vala  simple-tab.vala  simple-text  simple-text-editor.vala  simple-text.doap  tab-label.vala
data/: Makefile.am  Makefile.in  com.github.badwolfie.simple-text.gschema.xml  menu.ui  simple-text.desktop.in  simple-text.gresource.xml
data/icons/: Makefile  Makefile.am  Makefile.in
data/icons/256x256/: Makefile  Makefile.am  Makefile.in
data/icons/48x48/: Makefile  Makefile.am  Makefile.in
data/icons/scalable/: Makefile  Makefile.am  Makefile.in
po/: POTFILES.in  POTFILES.skip  de.po  es.po
resources/: LICENSE_HEADER  menu.ui
src/: Makefile.am  Makefile.in  config.vapi  confirm-exit.c  confirm-exit.vala  main-window.c  main-window.vala  preferences-dialog.vala  programming-languages.c  programming-languages.vala  resources.c  simple-header-bar.c  simple-header-bar.vala  simple-language-picker.c  simple-language-picker.vala  simple-preferences.c  simple-preferences.vala  simple-source-style-picker.vala  simple-source-view.c  simple-source-view.vala  simple-statusbar.c  simple-statusbar.vala  simple-tab-bar.c  simple-tab-bar.vala  simple-tab.c  simple-tab.vala  simple-text-editor.vala  simple-text.c  simple-text.vala  st-application.vala  st-header-bar.vala  st-language-picker.vala  st-main-window.vala  st-preferences-dialog.vala  st-programming-languages.vala  st-source-style-picker.vala  st-source-view.c  st-source-view.vala  st-statusbar.vala  st-tab-bar.vala  (+4 more)
style_schemes/: monokai-extended.xml
vapi/: Makefile.in  config.vapi
